Trying with line breaks

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -4,7 +4,10 @@ on:
   workflow_dispatch:
     inputs:
       pr_name:
-        description:  PR number for core, "repo/PR#" for deployment for other project
+        description: >
+          PR number for core,
+          use "repo/PR#" it the app is deployed for other project
+          (will notify in the `repo`)
         required: true
         type: string
         hint: "Hey, I'm a hint!"
