--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Configure git commiter info
         run: |
-          git config user.name='Github Bot' user.email='27407+timon@users.noreply.github.com'
+          git config user.name 'Github Bot'
+          git config user.email '27407+timon@users.noreply.github.com'
         shell: bash
       - name: Perform a release
         run: |
