--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,13 @@ jobs:
         uses: actions/checkout@v3
       - name: Configure git commiter info
         run: |
-          git config user.name 'Github Bot'
+          invoker="${{ github.event.sender.login }}"
+          if [ "${invoker}" ]
+          then
+            invoker_name="$(gh api users/${invoker} --template '{{ .name }}')"
+          fi
+          [ "$invoker_name" ] || invoker_name='Github Bot'
+          git config user.name "${invoker_name}"
           git config user.email '27407+timon@users.noreply.github.com'
           git config http.https://github.com/.extraheader "AUTHORIZATION: basic ${GH_ACCESS_TOKEN}"
         shell: bash
