--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [ synchronize, opened, reopened ]
   push:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   ci:
