--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           [ "$invoker_name" ] || invoker_name='Github Bot'
           git config user.name "${invoker_name}"
           git config user.email '27407+timon@users.noreply.github.com'
-          git config http.https://github.com/.extraheader "AUTHORIZATION: basic ${GH_TOKEN}"
+          git config http.https://github.com/.extraheader "AUTHORIZATION: Bearer ${GH_TOKEN}"
         shell: bash
         env:
           GH_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
