--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,10 @@ jobs:
             invoker_name="$(gh api users/${invoker} --template '{{ .name }}')"
           fi
           [ "$invoker_name" ] || invoker_name='Github Bot'
+          encoded_token=$(echo -n "${GH_TOKEN}" | base64)
           git config user.name "${invoker_name}"
           git config user.email '27407+timon@users.noreply.github.com'
-          git config http.https://github.com/.extraheader "AUTHORIZATION: Bearer ${GH_TOKEN}"
+          git config http.https://github.com/.extraheader "AUTHORIZATION: Basic ${encoded_token}"
         shell: bash
         env:
           GH_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
