--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,11 @@ jobs:
           then
             invoker_name="$(gh api users/${invoker} --template '{{ .name }}')"
           fi
+
           [ "$invoker_name" ] || invoker_name='Github Bot'
           git config user.name "${invoker_name}"
           git config user.email '27407+timon@users.noreply.github.com'
-          git config http.https://github.com/.extraheader "AUTHORIZATION: Bearer ${GH_TOKEN}"
+          gh auth setup-git
         shell: bash
         env:
           GH_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
