--- a/.github/workflows/pr-mgmt.yml
+++ b/.github/workflows/pr-mgmt.yml
@@ -9,3 +9,5 @@ jobs:
     steps:
       - run: |
           gh pr comment --body "What happened: ${{ github.event.action }}"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
