--- a/.github/workflows/pr-mgmt.yml
+++ b/.github/workflows/pr-mgmt.yml
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          gh pr comment --body "What happened: ${{ github.event.action }}"
+          gh pr comment ${{ github.event.pull_request.number }} --body "What happened: ${{ github.event.action }}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
