--- a/.github/workflows/pr-mgmt.yml
+++ b/.github/workflows/pr-mgmt.yml
@@ -2,6 +2,8 @@ name: "Evaluate PR lifecycle"
 on:
   pull_request:
     types: [opened, synchronize, closed, reopened]
+  pull_request_target:
+    types: [closed]
 
 jobs:
   comment:
@@ -10,6 +12,6 @@ jobs:
       - run: |
           gh pr comment ${{ github.event.pull_request.number }} \
             -R "${{ github.repository }}" \
-            -b "What happened: ${{ github.event.action }}"
+            -b "What happened: ${{ github.event_name }} ${{ github.event.action }}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
